--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="TeraMovies">
 
+	<!-- adding css -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'home/bootstrap/css/bootstrap.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/fonts/font-awesome.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/css/selectize.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'home/css/user.css' %}">
+	<!-- adding fevicon image -->
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'home/fevicon/fevicon.png' %}">
 
 	<title> TeraMovies | Homepage </title>
@@ -328,7 +330,7 @@
     <script type="text/javascript" src="{% static 'home/js/popper.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'home/bootstrap/js/bootstrap.min.js' %}"></script>
     
-    <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>-->
+   <!-- java script -->
 	<script src="{% static 'home/js/selectize.min.js' %}"></script>
 	<script src="{% static 'home/js/masonry.pkgd.min.js' %}"></script>
 	<script src="{% static 'home/js/icheck.min.js' %}"></script>
