--- a/templates/base.html
+++ b/templates/base.html
@@ -2,19 +2,23 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<!--===== Meta Tag =====-->
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="TeraMovies">
 
-	<!-- adding css -->
+	 <!--	Css Links ==================================================-->
+	
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'home/bootstrap/css/bootstrap.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/fonts/font-awesome.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/css/selectize.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'home/css/user.css' %}">
-	<!-- adding fevicon image -->
+	
+	<!-- Favicon   ==================================================-->	
+	
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'home/fevicon/fevicon.png' %}">
 
 	<title> TeraMovies | Homepage </title>
